--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    compileOnly 'com.google.android.things:androidthings:0.6-devpreview'
+    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 
 
