--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,11 +24,22 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.things.contrib:driver-bmx280:0.2'
+
+    compileOnly 'com.google.android.things:androidthings:0.6-devpreview'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
     implementation 'com.android.support:support-v4:27.1.0'
+
+    implementation 'com.google.android.things.contrib:driver-bmx280:0.2'
+
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compileOnly 'com.google.android.things:androidthings:0.6-devpreview'
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
 }
+
+
+apply plugin: 'com.google.gms.google-services'
