--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,9 @@ dependencies {
 
     implementation 'com.google.android.things.contrib:driver-bmx280:0.2'
 
-    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.android.gms:play-services-nearby:11.6.0'
+
+    implementation 'com.google.firebase:firebase-database:11.6.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
